--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,11 @@
 {
-	"manifest_version": 2
+	"manifest_version": 2,
+	"name": "SFAA Extensions",
+	"version": "1.0",
+	"content_scripts": [
+	{
+	  "matches": ["https://quad.my.salesforce.com/*", "https://quad--agf.na16.visual.force.com/*"],
+	  "js": ["baseExtension.js", "workView.js", "buildExtension.js", "sprintExtension.js"]
+	}
+	]
 }
