--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"manifest_version": 2,
 	"name": "SFAA Extensions",
-	"version": "1.0.0.1",
+	"version": "1.0.0.2",
 	"content_scripts": [
 	{
-	  "matches": ["https://quad.my.salesforce.com/*", "https://quad--agf.na16.visual.force.com/*"],
+	  "matches": ["https://quad.my.salesforce.com/*", "https://*.visual.force.com/*"],
 	  "js": ["baseExtension.js", "workView.js", "buildExtension.js", "sprintExtension.js"]
 	}
 	]
